--- a/src/MeuPonto.Web_App/Modules/Perfis/Criar.razor
+++ b/src/MeuPonto.Web_App/Modules/Perfis/Criar.razor
@@ -2,8 +2,6 @@
 @using MeuPonto.Modules.Perfis;
 @using Microsoft.EntityFrameworkCore;
 
-@inject MeuPontoDbContext _db;
-
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a asp-page="/Index"><i class="bi bi-house"></i></a></li>
@@ -156,15 +154,15 @@
 
         _perfil.CreationDate = DateTime.Now;
 
-        try
-        {
-            _db.Perfis.Add(_perfil);
-            await _db.SaveChangesAsync();
-        }
-        catch (Exception _)
-        {
-            throw;
-        }
+        //try
+        //{
+        //    _db.Perfis.Add(_perfil);
+        //    await _db.SaveChangesAsync();
+        //}
+        //catch (Exception _)
+        //{
+        //    throw;
+        //}
 
         //return RedirectToPage("./Detalhar", new { id = _perfil.Id });
     }
