--- a/src/MeuPonto.Web/Modules/Perfis/Empregadores/Editar.cshtml
+++ b/src/MeuPonto.Web/Modules/Perfis/Empregadores/Editar.cshtml
@@ -21,7 +21,7 @@
         <ul class="nav nav-tabs card-header-tabs">
             <li class="me-1">
                 <a class="btn btn-primary" asp-page="./Criar">
-                    <i class="bi bi-plus-circle me-1"></i>
+                    <i class="bi bi-plus-circle"></i>
                     Criar Novo
                 </a>
             </li>
