--- a/src/MeuPonto.Web/Modules/Shared/_LoginPartial.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_LoginPartial.cshtml
@@ -8,7 +8,12 @@
                 @User.Identity?.Name
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-                @*<li><a class="dropdown-item" href="#">@User.Identity?.Name</a></li>*@
+                <li>
+                    <a class="dropdown-item" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="EditProfile">Editar</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="ResetPassword">Redefinir Senha</a>
+                </li>
                 <li>
                     <a class="dropdown-item" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">Sair</a>
                 </li>
