--- a/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
+++ b/src/MeuPonto.Web/Modules/Shared/_Layout.cshtml
@@ -44,8 +44,14 @@
                                 <a class="nav-link @Html.ActiveClass("/Perfis") Perfis" asp-area="" asp-page="/Perfis/Index">Perfis</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link @Html.ActiveClass("/Empregadores") Perfis" asp-area="" asp-page="/Empregadores/Index">Empregadores</a>
+                                <a class="nav-link @Html.ActiveClass("/Empregadores")" asp-area="" asp-page="/Empregadores/Index">Empregadores</a>
                             </li>
+                            @if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link @Html.ActiveClass("/Trabalhadores")" asp-area="" asp-page="/Trabalhadores/Index">Trabalhadores</a>
+                                </li>
+                            }
                         </ul>
                     }
                     else
