--- a/src/MeuPonto.Web/Modules/Pontos/Folhas/Abrir.cshtml
+++ b/src/MeuPonto.Web/Modules/Pontos/Folhas/Abrir.cshtml
@@ -220,6 +220,7 @@
                 </div>
             </div>
         </div>
+        <input type="hidden" asp-for="Folha.Competencia" />
         <button type="submit" value="Salvar" class="btn btn-primary">
             <i class="bi bi-save"></i>
             Salvar
