--- a/src/MeuPonto.Web/Modules/Configuracoes.cshtml
+++ b/src/MeuPonto.Web/Modules/Configuracoes.cshtml
@@ -68,7 +68,7 @@
             @*<p class="mb-0 opacity-50">Some placeholder content in a paragraph that goes a little longer so it wraps to a new line.</p>*@
         </div>
         <span class="text-primary">
-            <b>@MeuPonto.Modules.Trabalhadores.Trabalhador.Default.Id</b>
+            <b>@Model.Configuracoes.UserId</b>
         </span>
     </li>
     <li class="list-group-item d-flex justify-content-between align-items-start gap-3 py-3">
