--- a/src/MeuPonto.Web/Modules/Trabalhadores/Index.cshtml
+++ b/src/MeuPonto.Web/Modules/Trabalhadores/Index.cshtml
@@ -51,7 +51,7 @@
                 <tr data-id="@item.Id" data-name="@item.Id">
                     <td class="p-1" scope="row">
                         <div class="btn-group" role="group">
-                            <a class="btn btn-link rounded-0">
+                            <a class="btn btn-link rounded-0" asp-page="/Configuracoes" asp-route-id="@item.Id">
                                 <i class="bi bi-gear"></i>
                             </a>
                         </div>
